// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default page when there is not page match 1`] = `
<div
  className={undefined}
>
  <Header
    githubURL={undefined}
    logo={undefined}
    title={undefined}
  />
  <div
    className="container"
  >
    <div
      className="row"
    >
      <Sidebar
        className="col col-lg-3"
        content={[Function]}
        currentPage="/"
      />
      <docRootIndexFile
        className="col col-lg-9"
      />
    </div>
  </div>
  <Footer />
</div>
`;

exports[`renders first page at index if found 1`] = `
<div
  className={undefined}
>
  <Header
    githubURL={undefined}
    logo={undefined}
    title={undefined}
  />
  <div
    className="container"
  >
    <div
      className="row"
    >
      <Sidebar
        className="col col-lg-3"
        content={[Function]}
        currentPage="/"
      />
      <firstPage
        className="col col-lg-9"
      />
    </div>
  </div>
  <Footer />
</div>
`;

exports[`renders matched page 1`] = `
<div
  className={undefined}
>
  <Header
    githubURL={undefined}
    logo={undefined}
    title={undefined}
  />
  <div
    className="container"
  >
    <div
      className="row"
    >
      <Sidebar
        className="col col-lg-3"
        content={[Function]}
        currentPage="/foo"
      />
      <foo
        className="col col-lg-9"
      />
    </div>
  </div>
  <Footer />
</div>
`;

exports[`renders renders index if firstPagePath specified but not actually in markdown map 1`] = `
<div
  className={undefined}
>
  <Header
    githubURL={undefined}
    logo={undefined}
    title={undefined}
  />
  <div
    className="container"
  >
    <div
      className="row"
    >
      <Sidebar
        className="col col-lg-3"
        content={[Function]}
        currentPage="/"
      />
      <docRootIndexFile
        className="col col-lg-9"
      />
    </div>
  </div>
  <Footer />
</div>
`;
